5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1861_2176.log
== TEST (2019-06-26 18:07:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if(i != j):
			h = max(v[i,j])
			
print(h)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:10:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if(i != j):
			h = max(v[i,j])
			
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:10:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
				h = max(v[i,j])
		print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:13:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i -1,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:14:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i -1,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.03545
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
32
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:14:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i -1,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:16:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i-1,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.22582
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
32
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i-1,j-1] < v[i,j] ):
					h = v[i,j]
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:16:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i-1,j-1] < v[i,j] ):
					h = v[i,j]
	print(h)
-- EXECUTION TIME:
1.19006
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
0
20
32
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0
0
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
65.8
89.7
55.5
44.4
66.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:17:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i-1,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.30336
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
32
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Digite a matriz: 66.5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:17:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.27621
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:17:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.28272
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:18:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i+1,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.24035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j] < v[i+1,j] ):
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:18:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j + 1] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.27069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j] < v[i,j + 1] ):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:18:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.0468
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:19:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i+ 1,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:19:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i+ 1,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.03416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j-1] < v[i+ 1,j] ):
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:19:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i 1,j+ 1] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.840369
-- ERROR:
  File "/home/codebench/codes/1861/2176/main.py", line 11
    if(v[i,j-1] < v[i 1,j+ 1] ):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:19:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i 1,j+ 1] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.672172
-- ERROR:
  File "/home/codebench/codes/1861/2176/main.py", line 11
    if(v[i,j-1] < v[i 1,j+ 1] ):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:19:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i ,j + 1] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.16504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j-1] < v[i ,j + 1] ):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:19:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.11724
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
Digite a matriz: 40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Digite a matriz: 0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Digite a matriz: 66.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:20:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.07964
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:20:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:21:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.27075
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:22:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.1912
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j] ):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:23:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.13709
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:24:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.13323
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:26:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i == j):
			v[i,j] = 0
		h = max(v)[i,j]
print(h)
-- EXECUTION TIME:
1.00055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 12, in <module>
    h = max(v)[i,j]
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:26:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i == j):
			v[i,j] = 0
		h = max(v)[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:28:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] <= v[i,j] ):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.953126
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:29:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.19789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j - 1] < v[j]):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:29:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.05975
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j - 1] < v[i]):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j]):
					h = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:30:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.13482
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
h1 = 0
for i in range(a):
	for j in range(a):
		elif(i > j):
				h = max(v[i,j])
		elif(i > j):
			  h1 = max(v[i,j])
print(h1)
-- ERROR:
File "XXXX", line 11
    elif(i > j):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:37:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.04219
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
Digite a matriz: 40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Digite a matriz: 0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Digite a matriz: 66.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:37:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.20608
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
			j = 1
		if	(i != j):
			 if(v[i,j-1] < v[i,j]):
					h = v[i,j]
print(h)
-- ERROR:
File "XXXX", line 11
    if	(i != j):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:39:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j + 1]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.12863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j] < v[i,j + 1]):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:39:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j + 1]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.912787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j] < v[i,j + 1]):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:39:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j + 1]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.942488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j - 1] < v[i,j + 1]):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
h1 = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			if	(i > j):
				if(v[i,j] < v[i + 1, j]):
					h = v[i,j]
			elif	(i < j):
					if(v[i,j] < v[i,j+1]):
						 h1 = v[i,j]
					
print(h)
print(h2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:50:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j-1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.17558
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:51:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i + 1,j+ 1]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.12049
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j] < v[i + 1,j+ 1]):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:51:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j- 1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
0.976384
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:52:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a + 1):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.09091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2176/main.py", line 11, in <module>
    if(v[i,j - 1] < v[i,j]):
IndexError: index 3 is out of bounds for axis 1 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:53:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j - 1] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.07429
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
66.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:56:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] < v[i,j]):
					h = v[i,j]
print(h)
-- EXECUTION TIME:
1.04241
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:57:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
maior = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] > maior):
					maior = v[i,j]
print(h)
-- EXECUTION TIME:
1.11454
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:58:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
maior = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] > maior):
					maior = v[i,j]
print(h)
-- EXECUTION TIME:
1.19944
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:58:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
maior = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] > maior):
					maior = v[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:58:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

a = shape(v)[0]
h = 0
maior = 0
for i in range(a):
	for j in range(a):
		if	(i != j):
			 if(v[i,j] > maior):
					maior = v[i,j]
print(maior)
-- EXECUTION TIME:
1.14808
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
98.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
